# knowledge-refinery

./: .gitignore  .mcp.json  .refinery.yaml  AGENTS.md  README.md  mkdocs.yml  pyproject.toml  tox.ini
.agents/plugins/: marketplace.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  docs.yml
docs/: agent-workflow.md  agents-guidance-examples.md  architecture.md  cli.md  development.md  getting-started.md  git-operations.md  index.md  knowledge-model.md  knowledge-operations.md  mcp.md  project-lifecycle.md  schema.md  troubleshooting.md
docs/javascripts/: mermaid.mjs
docs/skills/: README.md  refinery-capture.md  refinery-curation.md  refinery-experience.md  refinery-experiences.md  refinery-maintenance.md  refinery-memory.md  refinery-project.md  refinery-repair.md  refinery-session.md  refinery-shared.md  refinery-stock.md
scripts/: apply_template.py  validate.sh  validate_distribution.py
skills/refinery-experience/: SKILL.md
skills/refinery-experience/agents/: openai.yaml
skills/refinery-maintenance/: SKILL.md
skills/refinery-maintenance/agents/: openai.yaml
skills/refinery-memory/: SKILL.md
skills/refinery-memory/agents/: openai.yaml
skills/refinery-project/: SKILL.md
skills/refinery-project/agents/: openai.yaml
src/knowledge_refinery/: __init__.py  __main__.py  agents_ops.py  cli.py  cli_output.py  config_ops.py  errors.py  experience_ops.py  front_matter.py  knowledge_ops.py  mcp_server.py  search_ops.py  session_metadata.py  storage_ops.py  tag_ops.py  template_ops.py  vault_ops.py  yaml_utils.py
src/knowledge_refinery/data/: __init__.py  agents.en.md  agents.jp.md
src/knowledge_refinery/template/codex/skills/refinery-capture/: SKILL.md
src/knowledge_refinery/template/codex/skills/refinery-curation/: SKILL.md
src/knowledge_refinery/template/codex/skills/refinery-experiences/: SKILL.md
src/knowledge_refinery/template/codex/skills/refinery-repair/: SKILL.md
src/knowledge_refinery/template/codex/skills/refinery-session/: SKILL.md
src/knowledge_refinery/template/codex/skills/refinery-shared/: SKILL.md
src/knowledge_refinery/template/codex/skills/refinery-stock/: SKILL.md
src/knowledge_refinery/template/refinery/shared/experiences/: AGENTS.md  EXPERIENCES.md
src/knowledge_refinery/template/refinery/shared/review/: AGENTS.md  README.md
src/knowledge_refinery/template/refinery/shared/review/rejected/: AGENTS.md  README.md
src/knowledge_refinery/template/refinery/shared/stock/: AGENTS.md  README.md
template/: AGENTS.append.md
template/.codex/skills/refinery-session/: SKILL.md
template/.codex/skills/refinery-session/scripts/: init_session.py  list_sessions.py
template/.codex/skills/refinery-shared/: SKILL.md
template/.refinery/shared/: state.md
template/.refinery/shared/stock/: README.md
template/scripts/: init_session.py  list_headers.py  list_sessions.py
tests/: _support.py  conftest.py  test_agents_ops.py  test_cli.py  test_cli_main.py  test_cli_output.py  test_cli_parser.py  test_cli_search.py  test_cli_update_session.py  test_cli_v2.py  test_errors.py  test_experience_ops.py  test_knowledge_ops.py  test_mcp_server.py  test_mcp_stdio.py  test_session_metadata.py  test_storage_ops.py  test_tag_ops.py  test_template_ops.py  test_vault_ops.py
