[project]
name = "knowledge-refinery"
version = "0.1.0"
description = "CLI tools and template distribution for knowledge refinery"
readme = "README.md"
authors = [
    { name = "Shinichi Kanehira", email = "shinichi.kanehira@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0.2,<7",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.18.0,<2",
    "pytest>=8.4.0,<9",
    "ruff>=0.11.0,<0.12",
    "tox>=4.24.0,<5",
    "types-PyYAML>=6.0.12.20250822,<7",
]

[dependency-groups]
dev = [
    "tox-uv>=1.28.0,<2",
    "uv>0.9.17",
]

[project.scripts]
knowledge-refinery = "knowledge_refinery.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["knowledge_refinery*"]

[tool.setuptools.package-data]
knowledge_refinery = [
    "py.typed",
    "data/*.md",
    "template/codex/skills/*/*.md",
    "template/refinery/shared/*.md",
    "template/refinery/shared/*/*.md",
    "template/refinery/shared/*/*/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 99
exclude = ["*.git", "*.ipynb"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "C",
    "I",
    "B",
    "UP",
]
ignore = [
    "D211",
    "D212",
]

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true
lines-after-imports = 2

[tool.mypy]
python_version = "3.11"
show_column_numbers = true
files = ["src/knowledge_refinery", "tests"]
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
