[project]
name = "knowledge-refinery"
description = "Central, cross-project experience repository tooling for Codex"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Shinichi Kanehira", email = "shinichi.kanehira@gmail.com" }
]
requires-python = ">=3.11"
dynamic = ["version"]
keywords = [
    "cli",
    "codex",
    "knowledge-management",
    "templates",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
license-files = ["LICENSE"]
dependencies = [
    "mcp>=1.0,<2",
    "PyYAML>=6.0.2,<7",
]

[project.urls]
Homepage = "https://github.com/skanehira1126/knowledge-refinery"
Repository = "https://github.com/skanehira1126/knowledge-refinery"
Issues = "https://github.com/skanehira1126/knowledge-refinery/issues"

[project.optional-dependencies]
dev = [
    "mypy>=1.18.0,<2",
    "pytest>=8.4.0,<9",
    "ruff>=0.11.0,<0.12",
    "tox>=4.24.0,<5",
    "types-PyYAML>=6.0.12.20250822,<7",
]
docs = [
    "mkdocs-material>=9,<10",
]

[dependency-groups]
dev = [
    "tox-uv>=1.28.0,<2",
    "uv>0.9.17",
]

[project.scripts]
knowledge-refinery = "knowledge_refinery.cli:main"

[build-system]
requires = ["flit_core >=3.11,<5"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "knowledge_refinery"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 99
exclude = ["*.git", "*.ipynb"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "C",
    "I",
    "B",
    "UP",
]
ignore = [
    "D211",
    "D212",
]

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true
lines-after-imports = 2

[tool.mypy]
python_version = "3.11"
show_column_numbers = true
files = ["src/knowledge_refinery", "tests"]
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
